infrastructure/k8s/app/proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
  labels:
    app: proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
      - name: proxy
        image: yehor542/proxy:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9091
