infrastructure/k8s/app/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-deployment
  labels:
    app: result
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - name: result
        image: yehor542/result_app
        imagePullPolicy: Always       # Wymusza pobieranie przy rolling restartach
        ports:
        - containerPort: 4000
