infrastructure/k8s/app/waf-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: waf
  labels:
    app: waf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: waf
  template:
    metadata:
      labels:
        app: waf
    spec:
      containers:
      - name: waf
        image: yehor542/waf:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9090
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
