infrastructure/k8s/app/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
