infrastructure/k8s/app/proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy
  labels:
    app: proxy
spec:
  type: ClusterIP
  ports:
  - port: 9091
    targetPort: 9091
  selector:
    app: proxy
