infrastructure/k8s/app/result-service.yaml
# LOCAL CLUSTER
apiVersion: v1
kind: Service
metadata:
  name: result
spec:
  type: ClusterIP
  selector:
    app: result
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4000
---
# PUBLIC FACING
#apiVersion: v1
#kind: Service
#metadata:
#  name: result
#spec:
#  type: LoadBalancer
#  selector:
#    app: result
#  ports:
#  - protocol: TCP
#    port: 80
#    targetPort: 80
