infrastructure/k8s/app/waf-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: waf-db
  labels:
    app: waf-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: waf-db
  template:
    metadata:
      labels:
        app: waf-db
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: waf-db-init
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: waf-db-init
        configMap:
          name: waf-db-init-scripts
---
apiVersion: v1
kind: Service
metadata:
  name: waf-db
  labels:
    app: waf-db
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: waf-db
