infrastructure/k8s/app/waf-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: waf-redis
  labels:
    app: waf-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: waf-redis
  template:
    metadata:
      labels:
        app: waf-redis
    spec:
      containers:
      - name: redis
        image: redis:alpine
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: waf-redis
  labels:
    app: waf-redis
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: waf-redis
