infrastructure/k8s/app/waf-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: waf
  labels:
    app: waf
spec:
  type: LoadBalancer
  ports:
  - port: 9090
    targetPort: 9090
    nodePort: 30090
  selector:
    app: waf
