infrastructure/k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subdomain-voting-ingress
  annotations:
    kubernetes.io/ingress.class: webapprouting.kubernetes.azure.com
    kubernetes.io/proxy-read-timeout: "3600"
    kubernetes.io/proxy-send-timeout: "3600"
    kubernetes.io/websocket-services: "result-service"
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: vote.74.248.82.97.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 80

  - host: result.74.248.82.97.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: result
            port:
              number: 80
